# tu

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
Formula/: tu.rb
rust/: Cargo.toml  README.md
rust/src/: app.rs  conf_setup.rs  lib.rs  main.rs  modals.rs  state.rs  theme.rs  tmux.rs  view.rs
scripts/: build-all.sh  package-all.sh
src/: app.rs  lib.rs  models.rs  state.rs  view.rs
src/tmuxui/: __init__.py  __main__.py  actions.py  app.py  commands.py  conf_setup.py  hotkey.py  models.py  mouse_setup.py  styles.tcss  tmux.py
src/tmuxui/widgets/: __init__.py  help.py  hints.py  layout_picker.py  modals.py  palette.py  pane_picker.py  preview.py  resize_overlay.py  sessions.py  windows.py
tests/: conftest.py  test_action_mapping.py  test_app_pilot.py  test_conf_setup.py  test_hotkey_installer.py  test_main_entry.py  test_mouse_setup.py  test_tmux_parser.py
