[package]
name = "tmuxui"
version = "0.10.0"
edition = "2021"
authors = ["hungryZoo <heonzoo.lee@gmail.com>"]
description = "tu — a tiny tmux session menu. List, create, attach, detach, delete."
license = "MIT"
homepage = "https://github.com/hungryZoo/tu"
repository = "https://github.com/hungryZoo/tu"
keywords = ["tmux", "tui", "ratatui", "terminal"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "tu"
path = "src/main.rs"

[dependencies]
# We render with ratatui and drive the event loop ourselves on top of
# crossterm. Unlike cursive, crossterm gives us MouseEventKind::Moved
# events, so we can implement real hover feedback per widget.
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"

regex = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"

[dev-dependencies]
tempfile = "3"

[profile.release]
# Optimise for binary size — this is a CLI tool, not a hot loop.
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
