[project]
name = "tmuxui"
version = "0.4.0"
description = "tu — a tiny tmux session menu. List, create, attach, detach."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "hungryZoo", email = "heonzoo.lee@gmail.com" },
]
keywords = ["tmux", "tui", "textual", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Terminals",
    "Topic :: System :: System Shells",
]
dependencies = [
    "textual>=0.85.0",
]

[project.urls]
Homepage = "https://github.com/hungryZoo/tu"
Repository = "https://github.com/hungryZoo/tu"
Issues = "https://github.com/hungryZoo/tu/issues"

[project.scripts]
tu = "tmuxui.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tmuxui"]

[tool.hatch.build.targets.sdist]
include = [
    "src/tmuxui",
    "tests",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long - handled by formatter
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
